--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/Sug4rSku11/node-api4-project#readme",
   "devDependencies": {
     "eslint": "^8.3.0",
-    "eslint-plugin-react": "^7.27.1"
+    "eslint-plugin-react": "^7.27.1",
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
     "cors": "^2.8.5",
